Add KeySets API
